vest-dsl/test/bad/array_len_type2.vest
foo = {
  a: u8,
  b: u32,
}

fmt(@a: [u8; 4]) = {
  b: [foo; @a],
}
